--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div>
-    <app-sectors></app-sectors>
-    <app-toggle></app-toggle>
-    <app-calendar></app-calendar>
+<div class="wrapper">
+    <app-sectors class="sectors"></app-sectors>
+    <div class="description">Test</div>
+    <app-toggle class="toggle"></app-toggle>
+    <mat-divider class="divider"></mat-divider>
+    <app-calendar class="calendar"></app-calendar>
 </div>
