--- a/src/app/sectors/sectors.component.html
+++ b/src/app/sectors/sectors.component.html
@@ -1,6 +1,6 @@
-<mat-form-field>
-  <mat-select placeholder="Sektor">
-    <mat-option *ngFor="let sector of sectors" [value]="sector.value">
+<mat-form-field class="sector__select">
+  <mat-select placeholder="Sektor" (change)="setSelectColor($event)">
+    <mat-option *ngFor="let sector of sectors" [value]="sector.value" [ngStyle]="{'color' : sector.value}">
       {{ sector.viewValue }}
     </mat-option>
   </mat-select>
