Change class names

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <app-sectors class="sectors"></app-sectors>
-    <div class="description">Test</div>
+    <div class="description">Test śćąźżę</div>
     <app-toggle class="toggle"></app-toggle>
     <mat-divider class="divider"></mat-divider>
     <app-calendar class="calendar"></app-calendar>
