--- a/src/app/sectors/sectors.component.html
+++ b/src/app/sectors/sectors.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="sector__select">
+<mat-form-field class="sectors__select">
   <mat-select placeholder="Sektor" (change)="setSelectColor($event)">
     <mat-option *ngFor="let sector of sectors" [value]="sector.value" [ngStyle]="{'color' : sector.value}">
       {{ sector.viewValue }}
