Add new components and styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="wrapper">
+    <app-header class="header mat-elevation-z6"></app-header>
     <app-sectors class="sectors"></app-sectors>
-    <div class="description">Test śćąźżę</div>
+    <app-description class="description"></app-description>
     <app-toggle class="toggle"></app-toggle>
-    <mat-divider class="divider"></mat-divider>
+    <mat-divider class="down-divider"></mat-divider>
     <app-calendar class="calendar"></app-calendar>
+    <app-footer class="footer"></app-footer>
 </div>
