--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,4 +1,6 @@
+<app-calendar-header class="calendar__header" [(view)]="view" [(viewDate)]="viewDate"></app-calendar-header>
 <mwl-calendar-month-view
   [viewDate]="viewDate"
   [events]="events">
 </mwl-calendar-month-view>
+<div></div>
