--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,12 @@
 <header class="header__wrapper">
-  <a href="/"><img class="header__logo" src="assets/wystaw-smieci-logo-small.png" width="30" height="39" alt="Wystaw śmieci logo"></a>
+  <a class="header__logo" href="/"><img src="assets/wystaw-smieci-logo-small.png" width="30" height="39" alt="Wystaw śmieci logo"></a>
   <h1 class="header__title">
     Wystaw śmieci - Zielonka
   </h1>
+  <a class="header__facebook" href="https://www.facebook.com/ZielonkaWystawSmieci/">
+    <button mat-button>
+      <img class="header__facebook__logo" src="assets/facebook-logo-small.png" width="24" height="24" alt="Fanpage logo">
+      Facebook
+    </button>
+  </a>
 </header>
