Add Polish locale to calendar

--- a/src/app/calendar/calendar-header/calendar-header.component.html
+++ b/src/app/calendar/calendar-header/calendar-header.component.html
@@ -9,5 +9,4 @@
     Następny
   </button>
 </div>
-<h3 class="calendar__header__month">{{ viewDate | calendarDate:(view + 'ViewTitle'):locale }}</h3>
-
+<h3 class="calendar__header__month">{{ viewDate | date:'fullDate':'':locale }}</h3>
