--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,6 +1,12 @@
-<app-calendar-header class="calendar__header" [(view)]="view" [(viewDate)]="viewDate"></app-calendar-header>
+<app-calendar-header class="calendar__header"
+  [(view)]="view" 
+  [(viewDate)]="viewDate"
+  [locale]="locale">
+</app-calendar-header>
 <mwl-calendar-month-view
   [viewDate]="viewDate"
-  [events]="events">
+  [weekStartsOn]="1"
+  [events]="events"
+  [locale]="locale">
 </mwl-calendar-month-view>
 <div></div>
