--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,12 @@ body {
 .cal-month-view .cal-day-cell.cal-out-month .cal-day-number {
   opacity: 0.2;
 }
+
+// Overriding material button font size
+.mat-button, .mat-fab, .mat-icon-button, .mat-mini-fab, .mat-raised-button {
+  font-size: 0.9em;
+}
+
+.mat-slide-toggle-content {
+  font-size: 0.9em;
+}
