Fix calendar cell hover isue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,7 @@ body {
   background-color: inherit;
 }
 
-.cal-month-view .cal-cell-row .cal-cell:hover:not(.cal-today:hover) {
+.cal-month-view .cal-cell-row .cal-cell:hover:not(.cal-today) {
   background-color: inherit;
 }
 
