--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,4 @@
+// Colors
 $primary-color-dark:   #303F9F;
 $primary-color:        #3F51B5;
 $primary-color-light:  #C5CAE9;
@@ -6,3 +7,14 @@ $accent-color:         #E040FB;
 $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #BDBDBD;
+
+// Breakpoints
+$calendar-header: '(min-width: 64em)'; // 1024px
+$header-collapse: '(min-width: 48em)'; // 768px
+
+// Media queries
+@mixin respond-to($media) {
+  @media only screen and #{$media} {
+    @content;
+  }
+}
