--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -1,6 +1,11 @@
+@import "~variables.scss";
+
 .calendar__header {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-items: center;
+  @include respond-to($calendar-header) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
