--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -3,10 +3,10 @@
   [(viewDate)]="viewDate"
   [locale]="locale">
 </app-calendar-header>
+<mat-divider class="calendar__devider"></mat-divider>
 <mwl-calendar-month-view
   [viewDate]="viewDate"
   [weekStartsOn]="1"
   [events]="events"
   [locale]="locale">
 </mwl-calendar-month-view>
-<div></div>
