--- a/src/app/calendar/calendar-header/calendar-header.component.html
+++ b/src/app/calendar/calendar-header/calendar-header.component.html
@@ -11,5 +11,5 @@
 </div>
 <div class="calendar__header__nearest">
   <h4 class="calendar__header__title">Najbliższy odbiór w wybranym sektorze</h4>
-  <h3 class="calendar__header__date">{{ viewDate | date:'fullDate':'':locale }}</h3>
+  <h3 class="calendar__header__date">{{ viewDate | date:'fullDate':'':locale }} (Segregowalne)</h3>
 </div>
