Change boundaries color

--- a/src/app/description/description.component.html
+++ b/src/app/description/description.component.html
@@ -2,7 +2,7 @@
   <h3>
     Tu będzie tytuł sektoru
   </h3>
-  <p>
+  <p class="description__boundary">
     A tu opis granic sektoru
   </p>
 </div>
