--- a/src/app/description/description.component.scss
+++ b/src/app/description/description.component.scss
@@ -1,3 +1,10 @@
-.description__text {
-  text-align: center;
+@import "~variables.scss";
+
+.description {
+  &__text {
+    text-align: center;
+  }
+  &__boundary {
+    color: $secondary-text-color;
+  }
 }
