--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -13,6 +13,9 @@
     font-weight: 500;
     display: inline-block;
     margin: 0 0.5em;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
   &__facebook {
     color: white;
