--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,10 @@ body {
   background-color: inherit;
 }
 
+.cal-month-view .cal-header {
+  height: 2.2em;
+}
+
 // Overriding material button font size
 .mat-button, .mat-fab, .mat-icon-button, .mat-mini-fab, .mat-raised-button {
   font-size: 0.9em;
