--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
     <app-calendar class="calendar"></app-calendar>
     <app-footer class="footer"></app-footer>
 </div>
+<cookie-law class="cookie-law-component">Ta strona używa ciasteczek tylko do celów statystycznych.</cookie-law>
