--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -6,11 +6,11 @@
   grid-template-rows: 4em max-content;
   align-items: center;
   justify-items: center;
-  @include respond-to($calendar-header-buttons) {
+  @include respond-min($calendar-header-buttons) {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: max-content;
   }
-  @include respond-to($calendar-header) {
+  @include respond-min($calendar-header) {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: max-content;
   }
