Add data service

--- a/src/app/description/description.component.html
+++ b/src/app/description/description.component.html
@@ -1,8 +1,8 @@
 <div class="description__text">
   <h3>
-    Tu będzie tytuł sektoru
+    {{ descriptionTitle }}
   </h3>
   <p class="description__boundary">
-    A tu opis granic sektoru
+    {{ descriptionBoundary }}
   </p>
 </div>
