--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,17 +1,18 @@
 <ng-template #customCellTemplate let-day="day" let-locale="locale">
-  <div *ngIf="day.badgeTotal > 0 && day.events[0].color.primary === 'green'" class="cal-cell-top">
+  <!-- TODO: Improve this section -->
+  <div *ngIf="day.badgeTotal > 0 && day.events[0].color.primary === 'green'" class="cal-cell-top" matTooltip="Sektor zielony - {{ day.events[0].title }}">
       <img *ngIf="day.events[0].title === 'Segregowalne'" class="calendar__icon" src="assets/img/recycle.svg" [alt]="day.events[0].title">
       <img *ngIf="day.events[0].title === 'Biodegradowalne'" class="calendar__icon" src="assets/img/leafs.svg" [alt]="day.events[0].title">
       <img *ngIf="day.events[0].title === 'Zmieszane'" class="calendar__icon" src="assets/img/trash_can.svg" [alt]="day.events[0].title">
       <span class="cal-day-number calendar__day calendar__day--green">{{ day.date | calendarDate:'monthViewDayNumber':locale }}</span>
   </div>
-  <div *ngIf="day.badgeTotal > 0 && day.events[0].color.primary === 'blue'" class="cal-cell-top">
+  <div *ngIf="day.badgeTotal > 0 && day.events[0].color.primary === 'blue'" class="cal-cell-top" matTooltip="Sektor niebieski - {{ day.events[0].title }}">
       <img *ngIf="day.events[0].title === 'Segregowalne'" class="calendar__icon" src="assets/img/recycle.svg" [alt]="day.events[0].title">
       <img *ngIf="day.events[0].title === 'Biodegradowalne'" class="calendar__icon" src="assets/img/leafs.svg" [alt]="day.events[0].title">
       <img *ngIf="day.events[0].title === 'Zmieszane'" class="calendar__icon" src="assets/img/trash_can.svg" [alt]="day.events[0].title">
       <span class="cal-day-number calendar__day calendar__day--blue">{{ day.date | calendarDate:'monthViewDayNumber':locale }}</span>
   </div>
-  <div *ngIf="day.badgeTotal > 0 && day.events[0].color.primary === 'gold'" class="cal-cell-top">
+  <div *ngIf="day.badgeTotal > 0 && day.events[0].color.primary === 'gold'" class="cal-cell-top" matTooltip="Sektor żółty - {{ day.events[0].title }}">
       <img *ngIf="day.events[0].title === 'Segregowalne'" class="calendar__icon" src="assets/img/recycle.svg" [alt]="day.events[0].title">
       <img *ngIf="day.events[0].title === 'Biodegradowalne'" class="calendar__icon" src="assets/img/leafs.svg" [alt]="day.events[0].title">
       <img *ngIf="day.events[0].title === 'Zmieszane'" class="calendar__icon" src="assets/img/trash_can.svg" [alt]="day.events[0].title">
@@ -28,7 +29,7 @@
   [locale]="locale">
 </app-calendar-header>
 <mat-divider class="calendar__devider"></mat-divider>
-<mwl-calendar-month-view
+<mwl-calendar-month-view class="calendar__month-view"
   [viewDate]="viewDate"
   [weekStartsOn]="1"
   [events]="events"
