Add nearest collection text

--- a/src/app/description/description.component.html
+++ b/src/app/description/description.component.html
@@ -1,8 +1,9 @@
 <div class="description__text">
-  <h3>
+  <h3 class="description__title">
     {{ descriptionTitle }}
   </h3>
   <p class="description__boundary">
     {{ descriptionBoundary }}
   </p>
+  <h4 class="description__nearest">Najbliższy odbiór w wybranym sektorze: </h4>
 </div>
