Remove unnecessary text

--- a/src/app/calendar/calendar-header/calendar-header.component.html
+++ b/src/app/calendar/calendar-header/calendar-header.component.html
@@ -10,5 +10,5 @@
   </button>
 </div>
 <div class="calendar__header__nearest">
-  <h3 class="calendar__header__date">{{ viewDate | date:'fullDate':'':locale }} (Segregowalne)</h3>
+  <h3 class="calendar__header__date">{{ viewDate | date:'fullDate':'':locale }}</h3>
 </div>
