--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,15 +72,24 @@ body {
 }
 
 // Overriding material button font size
-.mat-button, .mat-fab, .mat-icon-button, .mat-mini-fab, .mat-raised-button {
-  font-size: 0.9em;
-}
-
 .mat-slide-toggle-content {
   font-size: 0.9em;
 }
 
 .mat-form-field-infix {
   width: auto !important;
-  max-width: 180px;
+  max-width: 11.25em;
+}
+
+.mat-raised-button, .mat-button {
+  font-size: 0.9em;
+  line-height: 2.5em !important;
+}
+
+.mat-select-panel {
+  max-height: none !important;
+}
+
+.cdk-overlay-pane {
+  min-width: 11.1em !important;
 }
