--- a/src/app/description/description.component.scss
+++ b/src/app/description/description.component.scss
@@ -14,9 +14,11 @@
   &__nearest {
     margin: 0.8em;
     font-weight: 500;
+    white-space: nowrap;
     &--date {
       color: #cc0000;
-      white-space: nowrap;
+      font-weight: 400;
+      font-size: 0.9em;
     }
   }
 }
