Change toggle color to green

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,6 +7,8 @@ $accent-color:         #E040FB;
 $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #BDBDBD;
+$toggle-main: green;
+$toggle-second: rgba(0, 128, 0, 0.5);
 
 // Breakpoints
 $calendar-header: 64em; // 1024px
