--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,3 +93,11 @@ body {
 .cdk-overlay-pane {
   min-width: 11.1em !important;
 }
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: $toggle-second;
+}
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: $toggle-main;
+}
