--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,14 +1,14 @@
 // Colors
-$primary-color-dark:   #303F9F;
-$primary-color:        #3F51B5;
-$primary-color-light:  #C5CAE9;
-$primary-color-text:   #FFFFFF;
-$accent-color:         #E040FB;
-$primary-text-color:   #212121;
+$primary-color-dark : #303F9F;
+$primary-color : #3F51B5;
+$primary-color-light : #C5CAE9;
+$primary-color-text : #FFFFFF;
+$accent-color : #E040FB;
+$primary-text-color : #212121;
 $secondary-text-color: #757575;
-$divider-color:        #BDBDBD;
-$toggle-main: green;
-$toggle-second: rgba(0, 128, 0, 0.5);
+$divider-color : #BDBDBD;
+$toggle-main: rgb(76, 175, 80);
+$toggle-second: rgba(76, 175, 80, 0.5);
 
 // Breakpoints
 $calendar-header: 64em; // 1024px
