--- a/src/app/toggle/toggle.component.html
+++ b/src/app/toggle/toggle.component.html
@@ -1,1 +1,4 @@
-<mat-slide-toggle class="toggle__slide">Powiadamiaj</mat-slide-toggle>
+<mat-slide-toggle class="toggle__slide">
+  Powiadamiaj<br>
+  <span class="toggle__slide__sector">(Sektor: {{sector}})</span>
+</mat-slide-toggle>
