Change hard coded text

--- a/src/app/toggle/toggle.component.html
+++ b/src/app/toggle/toggle.component.html
@@ -1,4 +1,4 @@
 <mat-slide-toggle class="toggle__slide">
-  Powiadamiaj<br>
+  Powiadomienia<br>
   <span class="toggle__slide__sector">(Sektor: {{sector}})</span>
 </mat-slide-toggle>
