Implements store last selected sector and store selected notyfication sector

--- a/src/app/toggle/toggle.component.html
+++ b/src/app/toggle/toggle.component.html
@@ -1,4 +1,5 @@
-<mat-slide-toggle class="toggle__slide">
-  Powiadomienia<br>
-  <span class="toggle__slide__sector">(Sektor: {{sector}})</span>
+<mat-slide-toggle class="toggle__slide" (change)="onToggle($event)" [checked]="checked">
+  Powiadomienia
+  <br>
+  <span class="toggle__slide__sector">(Sektor: {{viewSector}})</span>
 </mat-slide-toggle>
