Add cookie law expiration to 1 year

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,4 @@
     <app-calendar class="calendar"></app-calendar>
     <app-footer class="footer"></app-footer>
 </div>
-<cookie-law class="cookie-law-component">Ta strona używa ciasteczek tylko do celów statystycznych.</cookie-law>
+<cookie-law class="cookie-law-component" expiration="365">Ta strona używa ciasteczek tylko do celów statystycznych.</cookie-law>
