--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     Wystaw śmieci - Zielonka
   </h1>
   <a class="header__facebook" href="https://www.facebook.com/ZielonkaWystawSmieci/">
-    <button mat-button>
+    <button mat-button tabindex="-1">
       <img class="header__facebook__logo" src="assets/img/facebook-logo-small.png" width="24" height="24" alt="Fanpage logo">
       Facebook
     </button>
