Change alt text

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
   </h1>
   <a class="header__facebook" href="https://www.facebook.com/ZielonkaWystawSmieci/">
     <button mat-button tabindex="-1">
-      <img class="header__facebook__logo" src="assets/img/facebook-logo-small.png" width="24" height="24" alt="Fanpage logo">
+      <img class="header__facebook__logo" src="assets/img/facebook-logo-small.png" width="24" height="24" alt="Wystaw śmieci fanpage logo">
       Facebook
     </button>
   </a>
