Add status role

--- a/src/app/description/description.component.html
+++ b/src/app/description/description.component.html
@@ -9,4 +9,5 @@
     <span class="description__nearest--date">{{ nextDate | date:'fullDate':'':locale }}</span>
     <span class="description__nearest--date">({{ type }})</span>
   </h4>
+  <p role="status" class="description__aria-status"> {{ descriptionTitle }}  {{ descriptionBoundary }}. Najbliższy odbiór w wybranym sektorze: {{ nextDate | date:'fullDate':'':locale }} ({{ type }})</p>
 </div>
