--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,6 +101,10 @@ body {
   min-width: 11.1em !important;
 }
 
+.cdk-keyboard-focused, .mat-raised-button:hover {
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.4), 0px 5px 8px 1px rgba(0, 0, 0, 0.4) !important;
+}
+
 .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
   background-color: $toggle-second;
 }
