Remove facebook fan page button

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,7 @@
 <footer class="footer__text">
-  <a class="footer__link" href="https://mysliwiec.pro/">Tomasz Myśliwiec</a>&nbsp;&copy; 2017
+  &copy; 2017&nbsp;<a class="footer__link" href="https://mysliwiec.pro/">mysliwiec.pro</a>
+  <a class="footer__facebook" href="https://www.facebook.com/ZielonkaWystawSmieci/">
+    <img class="footer__facebook__logo" src="assets/img/facebook-logo-small.png" width="16" height="16" alt="Wystaw śmieci fanpage">
+    &nbsp;ZielonkaWystawSmieci
+  </a>
 </footer>
