Remove facebook fan page button

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,6 @@
 <header class="header__wrapper">
-  <a class="header__logo" href="/"><img src="assets/img/wystaw-smieci-logo-small.png" width="30" height="39" alt="Wystaw śmieci logo"></a>
+  <a class="header__logo" href="/"><img src="assets/img/wystaw-smieci-logo-small.png" width="30" height="39" alt="Wystaw śmieci - Zielonka"></a>
   <h1 class="header__title">
     Wystaw śmieci - Zielonka
   </h1>
-  <a class="header__facebook" href="https://www.facebook.com/ZielonkaWystawSmieci/">
-    <button mat-button tabindex="-1">
-      <img class="header__facebook__logo" src="assets/img/facebook-logo-small.png" width="24" height="24" alt="Wystaw śmieci fanpage logo">
-      Facebook
-    </button>
-  </a>
 </header>
