--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,3 +112,7 @@ body {
 .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
   background-color: $toggle-main;
 }
+
+.mat-tooltip {
+  font-size: 0.8em;
+}
