--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer__text">
-  &copy; 2017&nbsp;<a class="footer__link" href="https://mysliwiec.pro/">mysliwiec.pro</a>
+  &copy; 2017&nbsp;<a class="footer__link" href="https://mysliwiec.pro/">Tomasz Myśliwiec</a>
   <a class="footer__facebook" href="https://www.facebook.com/ZielonkaWystawSmieci/">
     <img class="footer__facebook__logo" src="assets/img/facebook-logo-small.png" width="16" height="16" alt="Wystaw śmieci Facebook Fanpage">
-    &nbsp;ZielonkaWystawSmieci
+    &nbsp;FanPage
   </a>
 </footer>
