--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,12 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   margin: 0;
   min-width: 320px;
   color: $primary-text-color;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
 }
 
 // Overriding calendar styles
