--- a/src/app/toggle/toggle.component.html
+++ b/src/app/toggle/toggle.component.html
@@ -1,3 +1,3 @@
-<mat-slide-toggle class="toggle__slide" (change)="onToggle($event)" [checked]="checked" matTooltip="Przypominaj sektor: {{viewSector}}">
+<mat-slide-toggle *ngIf="canNotify()" class="toggle__slide" (change)="onToggle($event)" [checked]="checked" matTooltip="Przypominaj sektor: {{viewSector}}">
   Przypominaj
 </mat-slide-toggle>
