Add webkit font smoothing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,8 +9,10 @@ body {
   margin: 0;
   min-width: 320px;
   color: $primary-text-color;
-  -webkit-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
 }
 
 .IE-warning {
